--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,4 +2,4 @@
 <p><%= @task.details %></p>
 <hr>
 <h3> <%= link_to "My Tasks", tasks_path %></h3>
-<p><%= link_to "edit", edit_path(@task.id) %></p>
+<p><%= link_to "edit", edit_path(@task) %></p>
